--- a/app/scss/core/_settings.scss
+++ b/app/scss/core/_settings.scss
@@ -58,43 +58,47 @@ $navigation-width: 270px;
 // Add your own color variables
 
 // Color brand
-$color-brand-50: #369d8a; // Default
+$color-brand-50: #59bba3; // Default
 
 $color-brand-20: lighten($color-brand-50, 30%);
-$color-brand-30: lighten($color-brand-50, 20%);
+$color-brand-30: lighten($color-brand-50, 18%);
 $color-brand-40: lighten($color-brand-50, 7%);
 $color-brand-60: darken($color-brand-50, 7%);
 $color-brand-70: darken($color-brand-50, 20%);
 
 // Color detail (secondary brand color)
-$color-detail-50: #ee7147; // Default
+$color-detail-50: #423652; // Default
 
 $color-detail-30: lighten($color-detail-50, 20%);
 $color-detail-40: lighten($color-detail-50, 7%);
 $color-detail-60: darken($color-detail-50, 7%);
-$color-detail-70: darken($color-detail-50, 20%);
+$color-detail-70: darken($color-detail-50, 11%);
+$color-detail-90: darken($color-detail-50, 18%);
 
 // Color success
-$color-success-50: #369d8a; // Default
+$color-success-50: #ee7147; // Default
 $color-success-60: darken($color-success-50, 20%);
 
 // Color alert
-$color-alert-50: #da5c5c; // Default
-$color-alert-60: darken($color-alert-50, 20%);;
+$color-alert-50: #e7663f; // Default
+$color-alert-60: #db4928;
 
-// Color neutral
-$color-neutral-10: #eeeeee; // almost white
-$color-neutral-20: #d0d3d2;	
-$color-neutral-30: #a2a7a6; // gray
-$color-neutral-40: #848b92;
-$color-neutral-50: #697783; // Default
-$color-neutral-60: #525e69; 
-$color-neutral-70: #2f3439; 
-$color-neutral-90: #2b2b2b; // almost black
+// Color neutral 
+$color-neutral-10: #f8f3f0; // almost white
+$color-neutral-20: #ede2dc;	
+$color-neutral-30: #c7c0ba; // gray
+$color-neutral-40: #b1a599;
+$color-neutral-50: #887867; // Default
+$color-neutral-60: #776b5f; 
+$color-neutral-70: #64584c; 
+$color-neutral-90: #2b2b2b; // almost black TODO
 
 // Color basics
 $black: #000;
 $white: #fff;
+$blue: #5f90b0;
+$orange: #e7663f;
+$yellow: #eac85d;
 
 
 // OLD COLORS
@@ -102,14 +106,11 @@ $light-red: #fbe3e4;
 $light-yellow: #fff6bf;
 $light-green: #e6efc2;
 
-$blue:                                  #049cdb;
 $dark-blue:                             #0064cd;
 $green:                                 #87b848;
 $lime:                                  #beca68;
 $red:                                   #a52b1f;
 $light-red:                             #c22b1c;
-$yellow:                                #ffc40d;
-$orange:                                #f90;
 $dark-orange:                           #ae4901;
 $pink:                                  #c3325f;
 $purple:                                #7a43b6;
