lists afronden en kleuren definitief

--- a/app/scss/core/_settings.scss
+++ b/app/scss/core/_settings.scss
@@ -84,14 +84,14 @@ $color-alert-50: #e7663f; // Default
 $color-alert-60: #db4928;
 
 // Color neutral 
-$color-neutral-10: #f8f3f0; // almost white
-$color-neutral-20: #ede2dc;	
-$color-neutral-30: #c7c0ba; // gray
-$color-neutral-40: #b1a599;
-$color-neutral-50: #887867; // Default
-$color-neutral-60: #776b5f; 
-$color-neutral-70: #64584c; 
-$color-neutral-90: #2b2b2b; // almost black TODO
+$color-neutral-10: #E9EAEB; // gray lighten 12%
+$color-neutral-20: #D6DADC;
+$color-neutral-30: #C3CACE; // gray
+$color-neutral-40: #86949B;
+$color-neutral-50: #52656E; // Default
+$color-neutral-60: #404E54;
+$color-neutral-70: #333E42; // black
+$color-neutral-90: #1B2224; // black
 
 // Color basics
 $black: #000;
