--- a/app/views/modules/runner/reports.html
+++ b/app/views/modules/runner/reports.html
@@ -7,7 +7,7 @@
 </div>
 <div class="search ng-hide" ng-show="initialized()" search></div>
 <ul id="report-list" class="main-content-list story-list filter-1 report-list">
-    <li class="ic cl list-animate" ng-repeat="runReport in filteredReports = (reportList() | reportPaginationFilter:reports.currentPage:reports.maxReports) track by runReport.id">
+    <li class="ic cl list-animate story-list--header" ng-repeat="runReport in filteredReports = (reportList() | reportPaginationFilter:reports.currentPage:reports.maxReports) track by runReport.id">
         <div class="selectable detailed" ng-click="reports.get(runReport.id)">
             <div class="title">
                 <i class="fa" ng-class="runReport.status" data-toggle="collection"></i>
