--- a/app/scss/modules/_search.scss
+++ b/app/scss/modules/_search.scss
@@ -6,23 +6,22 @@
     @include display(flex);
     @include justify-content(flex-end);
     @include align-items(center);
-    padding: 0.25rem $spacing;
+    padding: 0.35rem $spacing;
     position: relative;
-    margin-bottom: $spacing;
 
     i {
         display: inline-block;
         color: $color-neutral-60;
-        margin-right: $spacing/2;
         font-size: $font-size-40;
+        margin: -2px $spacing/2 0 3px;
     }
 
     input {
+        margin: 0 auto;
         display: inline-block;
-        width: 16rem;
-        padding: 0.25em 0.75em;
+        padding: 0.3em 0.75em 0.15rem;
         font-size: $font-size-20;
-        border-radius: 20px;
+        border-radius: $border-radius-20;
 
         &:focus { 
             border-color: $color-neutral-60;
