--- a/app/scss/shared-components/_story-list.scss
+++ b/app/scss/shared-components/_story-list.scss
@@ -1,9 +1,6 @@
 // =========== Story list
 
 ul.story-list {
-	padding: 0;
-	background: $white;
-	margin: $spacing $spacing*2;
 	padding: $spacing;
 	border-radius: $border-radius-10;
 
@@ -29,11 +26,18 @@ ul.story-list {
 				color: $color-neutral-60;
 			}
 		}
+
+		&:hover .actions {
+	    	opacity: 1;
+			width: auto;
+			overflow: visible; 
+		}
 	}
 
 	div.title {
         @include display(flex);
         @include align-items(center);
+        @include flex(1 1 auto);
     }
 
     .actions {
@@ -47,29 +51,57 @@ ul.story-list {
 
         .separate { margin: 0 0.25rem;}
     }
+
+    i {
+    	font-size: 1.2rem;
+    	width: 1.5rem;
+    	text-align: center;
+    }
+
 }
 
 li.story-list--header {
 
-	&:not(:last-of-type) { margin-bottom: $spacing; }	
+	&:not(:last-of-type) { margin-bottom: $spacing; }
 
 	> div {
+		font-size: 1.2rem;
 		background: $color-neutral-40;
 		color: $white;
 		margin: 0;
 		padding-left: $spacing/2;
 		box-shadow: 0 1px 2px 0 rgba($color-neutral-90, 0.34);
+
+
+    	.prefix i { margin-right: $spacing/2; }
+
 	}
 
-	> ul { 
-		border: 1px solid $color-neutral-40;
+	li {
+		background: #c8ced0; 
 	}
 
 }
 
 ul.story-list--stories {
+	border: 1px solid $color-neutral-30;
+
+	li:not(:last-of-type) > div {
+		border-bottom: 1px solid $color-neutral-30;
+	}
 
 	li > div {
-		background: $color-neutral-10;
+		background: $white;
+		padding: 0 1.15rem;
+	}
+
+	div.header {
+		padding: $spacing/2;
+
+		i {
+			position: relative;
+			left: -1px;
+			margin-right: $spacing/2;
+		}
 	}
 }
