basic structure css changes om de sidebar te laten werken

--- a/app/scss/core/_layout.scss
+++ b/app/scss/core/_layout.scss
@@ -1,4 +1,13 @@
 // =========== Layout
+div.layout {
+    height: 100%;
+    width: 100%;
+    @include display(flex);
+    @include flex-direction(row);
+}
+
+
+
 // Build up your container to get your website centered
 .l-container {
     margin: auto;
