--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -43,7 +43,6 @@
 	'components/modules/hero-notice',
 	'components/modules/pagination',
 	'components/modules/editor/editor-layout',
-	'components/modules/editor/sidebar',
 	'components/modules/editor/variable-blocks',
 	'components/modules/editor/modal',
 	'components/modules/editor/v2/stories-list',
@@ -65,6 +64,7 @@
 'modules/search',
 
 'modules/feedback',
+'modules/aside',
 
 'modules/radial-progress',
 
