--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -74,7 +74,7 @@
             </div>
         </div>
     </div>
-    <aside ng-class="{'expand' : story.sidebarIsExpanded()}" sidebar="false"></aside>
+    <aside ng-class="{'expand' : story.sidebarIsExpanded()}" sidebar="false" class="aside"></aside>
 </div>
 <div variable-modal>
 
